--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     <h1 class="new">hello guys</h1>
     <p id="test">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-    <p class="new">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p  id="mypara">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
     <p class="new">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
     <button>click</button>
+    <input type="text" placeholder="enter jS marks">
     <script src="Style.js"></script>
 </body>
 </html>
